[gd_scene load_steps=6 format=3 uid="uid://co0ha8sp7qfqg"]

[ext_resource type="Script" path="res://Scripts/Punch Fish.gd" id="1_rco4h"]
[ext_resource type="Texture2D" uid="uid://bi7fatllpk4fp" path="res://fsh.png" id="2_dkria"]

[sub_resource type="Curve2D" id="Curve2D_n1roc"]
_data = {
"points": PackedVector2Array(-2.31175, 64.256, 2.31175, -64.256, 64, 128, 0, 0, 0, 0, 192, 64, -14.0843, -61.1047, 14.0843, 61.1047, 320, 128)
}
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ep623"]
size = Vector2(25.0086, 47.9976)

[sub_resource type="CircleShape2D" id="CircleShape2D_sy8ki"]
radius = 37.4418

[node name="Path L>R" type="Path2D"]
position = Vector2(319, 189)
scale = Vector2(1.495, 1.495)
curve = SubResource("Curve2D_n1roc")

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(64, 128)
rotation = -1.53483
cubic_interp = false
loop = false
script = ExtResource("1_rco4h")

[node name="Sprite2D" type="Sprite2D" parent="PathFollow2D"]
position = Vector2(2.28882e-05, -1.52588e-05)
rotation = 1.56099
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_dkria")

[node name="Timer" type="Timer" parent="PathFollow2D"]
wait_time = 2.0
autostart = true

[node name="Area2D2" type="Area2D" parent="PathFollow2D"]
position = Vector2(0.248314, 0.205246)
rotation = 1.53483

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/Area2D2"]
position = Vector2(1.90735e-05, -1.90735e-05)
rotation = -1.53483
shape = SubResource("RectangleShape2D_ep623")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(192, 64)

[node name="ColorRect" type="ColorRect" parent="Area2D"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.0300404, 0.695579, 5.77569e-06, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_sy8ki")

[connection signal="timeout" from="PathFollow2D/Timer" to="PathFollow2D" method="_on_timer_timeout"]
[connection signal="area_entered" from="PathFollow2D/Area2D2" to="PathFollow2D" method="_on_area_2d_2_area_entered"]
[connection signal="area_exited" from="PathFollow2D/Area2D2" to="PathFollow2D" method="_on_area_2d_2_area_exited"]
[connection signal="area_entered" from="Area2D" to="PathFollow2D" method="_on_area_2d_area_entered"]
